# tauri-practice

./: .gitignore  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
e2e/: game-flow.spec.ts
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/game/: game_engine.rs  mod.rs  win_checker.rs
src-tauri/src/models/: game_state.rs  mod.rs  tile.rs
src/__tests__/: App.test.tsx  App.vrt.test.tsx  tauri-helpers.test.ts
src/__tests__/__snapshots__/: App.vrt.test.tsx.snap
src/components/: DebugPanel.tsx  DiscardDisplay.tsx  GameEndModal.tsx  HandDisplay.tsx  TileDisplay.tsx
src/components/__tests__/: DiscardDisplay.test.tsx  GameEndModal.test.tsx  HandDisplay.test.tsx  TileDisplay.test.tsx  TileDisplay.vrt.test.tsx
src/components/__tests__/__snapshots__/: TileDisplay.vrt.test.tsx.snap
src/lib/: tauri.ts  tileContent.ts
src/styles/: layout.css  tiles.css  variables.css
src/test/: tauri-mock.ts
