[package]
name = "tauri-practice"
version = "0.1.0"
description = "A Tauri App"
authors = ["takak2166"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
